<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.main.MainActivity" >

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_weather_fragment"
        android:name="ru.alexbox.inweather.view.main.MainFragment"
        android:layout_width="350dp"
        android:layout_height="260dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp" />

    <LinearLayout
        android:id="@+id/buttons_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_add"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/ic_menu_add"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_favorite"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/star_off"
            android:text="@string/button_add" />

        <Button
            android:id="@+id/button_settings"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@android:drawable/ic_menu_manage"
            android:text="@string/button_settings" />
    </LinearLayout>

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragment_cont_main"
        android:name="ru.alexbox.inweather.view.main.DaysFragment"
        android:layout_width="350dp"
        android:layout_height="290dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:id="@+id/buttons_frag_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_frag_1"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_info" />

        <Button
            android:id="@+id/button_frag_2"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_days" />

        <Button
            android:id="@+id/button_frag_3"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_map" />
    </LinearLayout>

</LinearLayout>